src/objects/DaScoopComposer__Recipient__c.object
<CustomObject>
    <fields>
        <fullName>DaScoopComposer__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates the contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tracked Messages</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>indicates the lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tracked Messages</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Recipient__c</fullName>
        <formula>IF(DaScoopComposer__Lead__c = null,
  &apos;Contact: &apos;,
  &apos;Lead: &apos;
)
&amp;
HYPERLINK(
IF(DaScoopComposer__Lead__c = null,  &apos;/&apos; &amp; DaScoopComposer__Contact__r.Id , &apos;/&apos; &amp; DaScoopComposer__Lead__r.Id),
  IF(DaScoopComposer__Lead__c = null,
    DaScoopComposer__Contact__r.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__Contact__r.LastName,
    DaScoopComposer__Lead__r.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__Lead__r.LastName
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>points to the recipient&apos;s lead or contact record.</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Times_Opened__c</fullName>
        <formula>DaScoopComposer__Tracked_Message__r.DaScoopComposer__Times_Opened__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates how many times the related tracked message was opened</inlineHelpText>
        <label>Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Tracked_Message__c</fullName>
        <inlineHelpText>Indicates the tracked message associated with a contact</inlineHelpText>
        <label>Tracked Message</label>
        <referenceTo>DaScoopComposer__Tracked_Message__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Type__c</fullName>
        <inlineHelpText>Indicates the type of recipient</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <label>Recipient ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>